Убраны исключения при выборе пункта меню. Изменена документация метода createAttempt.